--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ html {
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   color: #06264a;
 }
 
 hr {
-    margin: 20px auto;
+    margin: 10px auto;
     color: #F05F44;
     border: 3px solid #F05F44;
     max-width: 100px;
@@ -52,6 +52,6 @@ hr {
   --bs-btn-hover-border-color: #ee4b08;
 }
 
-.btn-xl {
+.btn-sm {
   padding: 1rem 2rem;
 }
